sirji/vscode-extension/src/views/chat/chat.css
body[data-vscode-theme-kind='vscode-dark'] {

  .icon svg>path {
    fill: white;
  }
}

body[data-vscode-theme-kind='vscode-light'] {

  .icon svg>path {
    fill: black;
  }
}

body[data-vscode-theme-kind='vscode-dark'] {

  .boticon svg>g>path {
    fill: white;
  }
}

body[data-vscode-theme-kind='vscode-light'] {

  .boticon svg>g>path {
    fill: black;
  }
}

body,
html {
  margin: 0;
  padding: 0;
  height: 100%;
  box-sizing: border-box;
}

#chatContainer {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 102px);
  /* margin-top: 45px; */
}

#messageContainer {
  display: flex;
  flex-direction: column;
  padding: 20px;
  overflow-y: auto;
  /* flex-grow: 1; */
}

.user-message:last-child,
.bot-message:last-child {
  margin-bottom: 20px;
}

/* Adjusted message styles for flexible width  */
/* .user {
  min-width: 100px;
  max-width: 80%;
  padding: 7px 10px;
  border-radius: 6px;
  color: white;
} */

.user {
  background-color: var(--vscode-welcomePage-tileHoverBackground);
  align-self: flex-end;
  margin-right: auto;
  flex: 1;
  padding: 7px 10px;
  border-radius: 6px;
  color: var(--vscode-breadcrumb-foreground);
}

.user-message {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  align-self: end;
  width: fit-content;
  max-width: 80%;
  margin-bottom: 10px;
  gap: 4px;
}

.user-text-inactive {
  align-self: flex-end;
  margin-left: auto;
  min-width: 100px;
  max-width: 80%;
  padding: 7px 10px;
  border-radius: 6px;
  color: var(--vscode-dropdown-foreground);
  /* --vscode-breadcrumb-foreground */
  opacity: 0.9;
}

.bot {
  background-color: var(--vscode-welcomePage-tileBackground);
  align-self: center;
  margin-right: auto;
  flex: 1;
  padding: 7px 10px;
  border-radius: 6px;
  color: var(--vscode-breadcrumb-foreground);
}

.bot-message {
  display: flex;
  align-items: flex-start;
  width: fit-content;
  max-width: 80%;
  margin-bottom: 10px;
  gap: 4px;
}

.message-loader {
  display: flex;
  align-items: center;
  height: 100%;
}

/* Input container fixed at the bottom */
.fixed-bottom {
  position: sticky;
  bottom: 0;
  left: 0;
}

#inputContainer {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  padding: 10px;
  background: #f1f1f1;
  /* width: 100%; */
  box-sizing: border-box;
}

textarea {
  flex-grow: 1;
  min-height: 34px;
  margin-right: 10px;
  padding: 10px 10px 0px 10px;
  border: none;
  border-radius: 5px;
  overflow-y: hidden;
  resize: none;
  font-size: 13px;
}

#sendBtn {
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  /* background-color: #302f2f; */
  background-color: var(--vscode-statusBarItem-remoteBackground);
  color: white;
  font-weight: bold;
  cursor: pointer;
  transition: background-color 0.3s, transform 0.2s;
}

#sendBtn:disabled {
  background-color: #ccc;
  cursor: not-allowed;
}

/* #sendBtn:hover {
  background-color: #444;
  transform: scale(1.05);
} */

/** Top Controls **/
.fixedHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
  position: fixed;
  height: 46px;
  top: 0px;
  padding: 0px 10px;
  z-index: 1;
  /* background-color: #1e1e1e; */
  background-color: var(--vscode-editor-background);
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 46px;
  padding: 0px 10px;
  background-color: var(--vscode-editor-background);
}

.right {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}


.progressContainer {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  cursor: pointer;
}

#openSettings {
  display: flex;
  cursor: pointer;
  font-size: 24px;
  width: 30px;
  height: 30px;
  justify-content: center;
  align-items: center;
}

#progressCircle {
  visibility: hidden;
  justify-content: center;
  align-items: center;
  position: relative;
  height: 30px;
  gap: 5px;
}

#progressCircle:hover {
  cursor: pointer;
}

#progressRingCircle {
  transition: stroke-dashoffset 0.35s;
  transform: rotate(-90deg);
  transform-origin: 50% 50%;
}

#progressText {
  font-size: 13px;
  font-weight: 400;
  line-height: 12.1px;
  text-align: left;
  padding: 1px 2px;
  background-color: transparent;
  transition: background-color 0.5s ease-in-out;
  /* Add transition for background-color */
}

/** Setting Modal **/

.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,
      0,
      0,
      0.5);
  display: none;
  justify-content: center;
  align-items: center;
}

.modal-body {
  position: relative;
  background-color: white;
  border: 1px solid white;
  border-radius: 9px;
  max-height: calc(100% - 120px);
  overflow: hidden;
  display: flex;
  flex-direction: column;

  background-color: #1e1e1e;
}

.modal-header {
  padding: 20px 40px 0 40px;
  position: sticky;
  top: 0;
  z-index: 1;
}

.modal-content {
  flex-grow: 1;
  overflow-y: auto;
  padding: 0 40px 20px 40px;
}

.settings-modal-container {
  display: flex;
  flex-direction: column;
  width: 720px;
}

.planner-modal-container {
  width: 720px;
}

.modal-heading {
  font-family: Arial;
  font-size: 12px;
  font-weight: 700;
  line-height: 13.8px;
  color: #ffffff;

  margin-bottom: 5px;
  margin-top: 15px;
}

.modal-subheading {
  font-family: Arial;
  font-size: 10px;
  font-weight: 400;
  line-height: 11.5px;
  color: #ffffff;

  margin-bottom: 10px;
}

#closeSettings {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
  cursor: pointer;

  position: absolute;
  top: 12px;
  right: 12px;
}

#closeSettings:hover,
#closeSettings:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.error-message {
  color: red;
  font-size: 12px;
  margin-top: 5px;
}

/** Planner Modal **/
#closePlanner {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
  cursor: pointer;

  position: absolute;
  top: 12px;
  right: 12px;
}
/* ... */

